Implement JWT authentication, pickup scheduling, email notifications and analytics